# system_design_projects

./: README.md
banking_ledger/: auth.py  banking.html  database.py  helper.py  ledger.py  main.py  pyproject.toml  schemas.py  tables.py
